[tool.poetry]
name = "openrelik-worker-takajo"
version = "2024.11.18"
description = "Custom worker for OpenRelik using Automagic analysis tool"
authors = ["Hussein Alselwi <geekypro.77@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
celery = {extras = ["redis"], version = "^5.4.0"}
openrelik-worker-common = "^2024.9.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false